--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^8.2",
         "filament/filament": "^3.2",
+        "icetalker/filament-table-repeater": "^1.3",
         "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9",
         "sirajcse/laravel-unique-id-generator": "^1.0"
